<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC107">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/txtLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="60dp"
                android:text="@string/txtTitulo"
                android:textColor="#131010"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="33dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogo" />

            <ImageView
                android:id="@+id/imgMovie"
                android:layout_width="192dp"
                android:layout_height="174dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/imgMovie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/txtYearT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:text="@string/txtYearT"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/imgMovie"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txtFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="35dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/txtYearT"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txtTittleT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/txtTittleT"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/imgMovie"
                app:layout_constraintTop_toBottomOf="@+id/txtYearT" />

            <TextView
                android:id="@+id/txtLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/txtTittleT"
                app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

            <TextView
                android:id="@+id/txtHandleT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/txtHandle"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/imgMovie"
                app:layout_constraintTop_toBottomOf="@+id/txtTittleT" />

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/imgMovie"
                app:layout_constraintTop_toBottomOf="@+id/txtHandleT" />

            <TextView
                android:id="@+id/txtIsbnT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="19dp"
                android:text="@string/txtISBNT"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgMovie" />

            <TextView
                android:id="@+id/txtPageT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/txtPageT"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIsbnT" />

            <TextView
                android:id="@+id/txtImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/txtPageT"
                app:layout_constraintTop_toBottomOf="@+id/txtFamily" />

            <TextView
                android:id="@+id/txtNotesT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/txtNotesT"
                android:textColor="#191515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPageT" />

            <TextView
                android:id="@+id/txtImageUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textColor="#0E0C0C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNotesT" />

            <TextView
                android:id="@+id/txtFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="19dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/txtIsbnT"
                app:layout_constraintTop_toBottomOf="@+id/imgMovie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>